--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 </div>
 <div class="section-2 container-fluid mt-3">
-    <div class="container text-center">
+    <div class="container text-center justify-content-center">
         <h1 class="mt-4">Quality OF OUR PRODUCT</h1>
     <div class="quality row mt-5">
         <div  class="image col-12 col-md-6 col-xl-3 mt-2">
